# ThinkVault

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  ThinkVault.spec  ThinkVault_v2.0_深度审计与质量保障报告.md  acceptance_report.json  benchmark_retrieval.py  benchmark_retrieval_full.py  build.py  cleanup_roles.py  docker-compose.yml  pyproject.toml  requirements.txt  requirements_20260531_045242_392.txt  retrieval_perf_report.json  run_acceptance_tests.py  test_custom_role_flow.py  test_roles.py  test_roles_simple.py  意向.txt
.github/workflows/: ci.yml
.kunsdd/plan/: 读取本地项目,完成项目评估.md
.workbuddy/memory/: 2026-06-04.md  2026-06-05.md  2026-06-06.md  2026-06-07.md  2026-06-08.md  MEMORY.md  overview.md
demo_docs/: 01_技术架构说明.txt  02_ThinkVault项目说明.md  03_周例会会议纪要.txt  04_产品规格说明书.docx  05_销售数据统计.xlsx
docs/: IMPROVEMENT_PLAN.md  Modelfile  architecture.md  markitdown_integration.md
output/: fix_round6_summary.md  integration_test_report.md
scripts/: benchmark.py  download_model.py  download_qwen25_7b.py  e2e_test.py  generate_demo.py
temp/: e2e_output.txt  integration_debug.txt  integration_final.txt  integration_out.txt  junit_results.xml  pytest_output.txt  server_stderr.txt  server_stderr2.txt  server_stderr3.txt  server_stdout.txt  server_stdout2.txt  server_stdout3.txt
test/: bench_markitdown.py  conftest.py  pip_err.txt  run_integration.py  test_api_integration.py  test_audit_fixes.py  test_audit_fixes_round2.py  test_chunker.py  test_doc_deep_learning.txt  test_e2e.py  test_e2e_mock.py  test_e2e_quick.py  test_hardware.py  test_llm_coverage.py  test_llm_extended.py  test_markitdown_adapter.py  test_parser.py  test_parser_coverage.py  test_parser_mock.py  test_parser_pptx.py  test_parser_xlsx.py  test_retriever.py  test_retriever_coverage.py  test_retriever_extended.py  test_ssrf_protection.py  test_storage.py  test_unit_chunker.py  test_unit_cli.py  test_unit_conversation_store.py  test_unit_db.py  test_unit_document_store.py  test_unit_embedder.py  test_unit_llm.py  test_unit_parser.py  test_unit_retriever.py  test_unit_storage.py  test_v1_integration.py  test_v2.py
test/test_output/: audit_report.md  chunk_test.txt  cn_sep.txt  e2e_test_report.md  meta_test.txt  small_test.txt  test_intro.txt  test_readme.md
test/test_output/empty_db/: chroma.sqlite3
test/test_output/test_chromadb/: chroma.sqlite3
thinkvault/: __init__.py  cli.py  config.py  launch.py
thinkvault/api/: server.py
thinkvault/api/routes/: __init__.py  chat.py  conversations.py  documents.py  kb.py  kb_manage.py  model.py  roles.py  services.py
thinkvault/api/schemas/: __init__.py
thinkvault/core/: base_store.py  bm25_index_store.py  chunker.py  container.py  conversation_store.py  db.py  doc_summary_store.py  document_store.py  embedder.py  file_change_store.py  incremental_indexer.py  indexer.py  inline_summarizer.py  markitdown_adapter.py  parser.py  retriever.py  role_store.py  scanner.py  service_manager.py  storage.py  summary_generator.py  task_manager.py  thinkvault_llm.py  watchdog_watcher.py  watched_dir_store.py
thinkvault/data/: intent_keywords.json
thinkvault/utils/: __init__.py  hardware.py  logger.py  security.py  time.py
thinkvault/webui/: app.js  index.html  style.css
