[project]
name = "thinkvault"
version = "2.0.0"
description = "个人 AI 工作台 - 把本地文档变成可对话的私人图书馆"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ThinkVault Team" }
]
keywords = ["rag", "llm", "local-ai", "knowledge-base", "document-qa", "ollama", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "torch>=2.0.0,<3.0.0",
    "psutil>=5.9.0",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
gpu = ["torch>=2.0.0"]
ocr = ["paddleocr>=2.8.0", "rapidocr-onnxruntime>=1.3.0"]
ppt = ["python-pptx>=0.6.0"]
excel = ["openpyxl>=3.1.0"]
dev = ["pytest>=8.0", "requests>=2.31"]

[project.scripts]
thinkvault = "thinkvault.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["thinkvault*"]
