[project]
name = "thinkvault"
version = "2.0.0"
description = "个人 AI 工作台 - 把本地文档变成可对话的私人图书馆"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ThinkVault Team" }
]
keywords = ["rag", "llm", "local-ai", "knowledge-base", "document-qa", "llama-cpp-python", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0,<3.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "chromadb>=0.5.0,<0.6.0",
    "rank-bm25>=0.2.2",
    "psutil>=5.9.0",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0,<1.0",
    "python-dotenv>=1.0.0",
    "watchdog>=4.0",
    "jieba>=0.42",
    "appdirs>=1.4",
]

[project.optional-dependencies]
# 本地 Embedding 模型（含 torch ~200MB，API 模式下无需安装）
# pip install thinkvault[local-embedding] 或 pip install thinkvault[all]
local-embedding = ["sentence-transformers>=3.0.0", "torch>=2.0.0,<3.0.0"]
# GPU 加速：需手动安装 CUDA 版 torch（pip install torch --index-url https://download.pytorch.org/whl/cu121）
# 此依赖无法通过 pip 自动解析，请根据硬件手动选择版本
# gpu = ["torch>=2.0.0+cu121"]  # 取消注释并手动安装对应 CUDA 版本
ocr = ["rapidocr-onnxruntime>=1.3.0"]
ppt = ["python-pptx>=0.6.0"]
excel = ["openpyxl>=3.1.0"]
media = ["faster-whisper>=1.0.0", "ffmpeg-python>=0.2.0"]
markitdown = ["markitdown[all]>=1.0.0"]
dev = ["pytest>=8.0", "requests>=2.31"]
# 全部可选依赖（不含 gpu，需手动安装 CUDA torch）
all = ["thinkvault[local-embedding,ocr,ppt,excel,media,markitdown]"]

[project.scripts]
thinkvault = "thinkvault.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["thinkvault*"]
